# rust-practical-web-projects

chapter2/catdex/: Cargo.toml
chapter2/catdex/migrations/2021-07-18-220646_create_cats/: up.sql
chapter2/catdex/src/: main.rs  models.rs
chapter2/catdex/static/: add.html  index.html
chapter2/hello-world/: Cargo.toml
chapter2/hello-world/src/: main.rs
chapter3/catdex-api/: Cargo.toml  cert.pem  key-no-password.pem  key.pem
chapter3/catdex-api/src/: errors.rs  main.rs  models.rs
chapter3/catdex-api/static/: cat.html  index.html
chapter4/client/: chat.html  chat.js  index.html  index.js
chapter4/websocket/: Cargo.toml
chapter4/websocket/examples/: chat_server.rs  echo_server.rs  ping_timeout.rs  push_notifications.rs
chapter5/serverless-catdex/: package-lock.json  package.json  serverless.yml
chapter5/serverless-catdex/cat_post/: Cargo.toml
chapter5/serverless-catdex/cat_post/src/: main.rs
chapter5/serverless-catdex/cats/: Cargo.toml
chapter5/serverless-catdex/cats/src/: main.rs
chapter5/serverless-hello-world/: Cargo.toml
chapter5/serverless-hello-world/src/: main.rs
chapter6/hello-world/: Cargo.toml
chapter6/hello-world/client/: index.js  package-lock.json  package.json
chapter6/wasm-image-processing/: Cargo.toml
chapter6/wasm-image-processing/src/: lib.rs
chapter6/yew-image-processing/: Cargo.toml  LICENSE_MIT  package-lock.json  webpack.config.js
chapter6/yew-image-processing/src/: app.rs
chapter6/yew-image-processing/static/: index.html
