[package]
name = "catdex-api"
version = "0.1.0"
authors = ["Hani Benhabiles <kroosec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["openssl"] }
actix-files = "0.3"
serde = "1.0"
serde_json = "1.0"
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
actix-rt = "2.2.0"
validator = "0.14.0"
validator_derive = "0.14.0"
derive_more = "0.99.16"
log = "0.4.14"
env_logger = "0.9.0"
openssl = "0.10"
